--- a/portas/styles/Presente.module.css
+++ b/portas/styles/Presente.module.css
@@ -1,5 +1,7 @@
 .presente {
+    position: relative;
     display: flex;
+    /* width: 200px; */
     flex-direction: column;
     align-items: center;
 }
