--- a/portas/styles/Formulario.module.css
+++ b/portas/styles/Formulario.module.css
@@ -4,3 +4,11 @@
     align-items: center;
     height: 100vh;
 }
+
+.link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+    margin: 0;
+}
